# samp-streamer-plugin

./: .gitmodules  .travis.yml  CHANGES.md  CMakeLists.txt  Makefile  README.md  appveyor.yml  bintray.json  pawn.json  premake4.lua  premake5.lua  streamer.def  streamer.inc  streamer.make  streamer.rc  streamer.sln  streamer.vcxproj  streamer.vcxproj.filters
.github/workflows/: build.yml
docker/: Dockerfile  build.sh  docker-entrypoint.sh
include/boost/chrono/detail/inlined/win/: process_cpu_clocks.hpp  thread_clock.hpp
include/sampgdk/: a_http-decl.h  a_http.h  a_objects-decl.h  a_objects.h  a_players-decl.h  a_players.h  a_samp-decl.h  a_samp.h  a_vehicles-decl.h  a_vehicles.h  amx.h  bool.h  config.h  core.h  export.h  interop.h  platform.h  plugin.h  sampgdk.h  sdk.h  types.h  version.h
include/sampgdk/sdk/: plugin.h
include/sampgdk/sdk/amx/: amx.h
lib/samp-plugin-sdk/: amxplugin.cpp
lib/samp-plugin-sdk/amx/: amx.h  getch.c
lib/sampgdk/: sampgdk.c  sampgdk.h
lib/sampgdk-amalgamation/: sampgdk.c
lib/sampgdk/src/: a_objects.cpp  a_players.cpp  a_samp.cpp  a_vehicles.cpp  amxhooks.cpp  amxhooks.h  core-linux.cpp  core-win32.cpp  core.cpp  fakeamx.cpp  fakeamx.h  hook-linux.cpp  hook-win32.cpp  hook.cpp  hook.h  natives.cpp  natives.h  sampgdk.c  timers-linux.cpp  timers-win32.cpp  timers.cpp  timers.h  version.cpp
lib/sampgdk/src/sdk/: plugin.cpp  plugin.h
lib/sampgdk/win32/: sampgdk3.lib  sampgdk3d.lib  sampgdk3s.lib  sampgdk3sd.lib  sampgdk4.lib
lib/sampgdk/windows/: sampgdk3s.lib  sampgdk3sd.lib  subhooks.lib
lib/sdk/: plugin.h  plugincommon.h
lib/sdk/amx/: amx.h
lib/sdk/src/: plugin.h
lib/subhook/win32/: subhook.lib  subhookd.lib
lib/subhook/windows/: subhookd.lib
src/: CMakeLists.txt  callbacks.cpp  callbacks.h  cell.cpp  cell.h  chunk-streamer.cpp  chunk-streamer.h  common.h  core.cpp  core.h  data.cpp  data.h  events.cpp  events.h  events.hpp  grid.cpp  grid.h  identifier.cpp  identifier.h  item.cpp  item.h  main.cpp  main.h  manipulation.cpp  manipulation.h  natives.cpp  natives.h  omp-nethack.cpp  omp-nethack.h  player.cpp  player.h  precompiled.cpp  precompiled.h  sampgdk.c  sampgdk.h  streamer.cpp  streamer.h  utility.cpp  utility.h
src/manipulation/: CMakeLists.txt  array-data.cpp  array-data.h  array.cpp  array.h  float-data.cpp  float.cpp  float.h  int-data.cpp  int.cpp  int.h
src/natives/: CMakeLists.txt  actors.cpp  areas.cpp  checkpoints.cpp  data-manipulation.cpp  deprecated.cpp  extended.cpp  internal.cpp  manipulation.cpp  map-icons.cpp  miscellaneous.cpp  objects.cpp  pickups.cpp  race-checkpoints.cpp  settings.cpp  text-labels.cpp  updates.cpp  vehicles.cpp
src/utility/: CMakeLists.txt  amx.cpp  amx.h  geometry.cpp  geometry.h  misc.cpp  misc.h
